--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "node unit test for example",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=development mocha './lib/**/*.test.js'"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/najaroen/node-unit-test#readme",
   "dependencies": {
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
     "mocha": "^8.2.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1"
   }
 }
